PC-1365 Fix alignment & wrapping for search controls

--- a/vufind/themes/msul/less/custom.less
+++ b/vufind/themes/msul/less/custom.less
@@ -1177,50 +1177,61 @@ table tr {
 // move sort dropdown left
 
 @media only screen and (min-width : 768px) {
+  .pager {
+    display: flex;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+  }
+  .view-buttons {
+    > a, > a:visited {
+      text-align:center;
+      padding:0.5rem;
+      text-decoration: none;
+      color:#18453b;
+      background-color: @lightsage;
+      -webkit-border-radius: 0.5rem;
+      -moz-border-radius: 0.5rem;
+      border-radius: 0.5rem;
+    }
+
+    > a:hover, > a:active, > span {
+      text-align:center;
+      padding:0.5rem;
+      text-decoration: none;
+      color:#ffffff;
+      background-color: @parakeetgreen;
+      -webkit-border-radius: 0.5rem;
+      -moz-border-radius: 0.5rem;
+      border-radius: 0.5rem;
+    }
+
+    .icon-link__label {
+      text-decoration: none;
+    }
+  }
+
   div.search-header {
-    display:block;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    column-gap: 0.5rem;
 
     .search-stats {
-      float:left;
       margin-right:2rem;
     }
 
     .search-controls {
-      text-align:left;
+      display: flex;
+      flex-wrap: nowrap;
+      align-items: center;
+      padding-top: 0.5rem;
+      padding-bottom: 0.5rem;
 
       .search-result-limit {
-        float:left;
         margin-right:2rem;
       }
       .search-sort .form-control {
         width:15rem;
-      }
-      .view-buttons {
-        > a, > a:visited {
-          text-align:center;
-          padding:0.5rem;
-          text-decoration: none;
-          color:#18453b;
-          background-color: @lightsage;
-          -webkit-border-radius: 0.5rem;
-          -moz-border-radius: 0.5rem;
-          border-radius: 0.5rem;
-        }
-
-        > a:hover, > a:active, > span {
-          text-align:center;
-          padding:0.5rem;
-          text-decoration: none;
-          color:#ffffff;
-          background-color: @parakeetgreen;
-          -webkit-border-radius: 0.5rem;
-          -moz-border-radius: 0.5rem;
-          border-radius: 0.5rem;
-        }
-
-        .icon-link__label {
-          text-decoration: none;
-        }
       }
     }
   }
@@ -1300,9 +1311,9 @@ label {
 }
 
 .view-buttons {
-  clear: both; // MSU
-  margin-top:.5rem;
-  margin-bottom:1.5rem;
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+  padding-right: 4rem;
 }
 
 // Remove table striping
